--- a/quiz1.html
+++ b/quiz1.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="topbar">
+        <p id="ReactionToTheAnswer"></p>
 
     </div>
     <div class="sidebar1">
@@ -27,10 +28,10 @@
 
             <form>
                 <div class="answergroup">
-                <div class="answer selected"><label><input type="checkbox" name="ans" value="1">450-103</label> </div>
-                <div class="answer"><label><input type="checkbox" name="ans" value="2">450-97</label> </div>
-                <div class="answer"><label><input type="checkbox" name="ans" value="3">450-100-3</label> </div>
-                <div class="answer"><label><input type="checkbox" name="ans" value="4">450-100+3</label></div>
+                <div class="answer selected" id="wrong1"><label><input type="checkbox" name="ans" value="1">450-103</label> </div>
+                <div class="answer" id="wrong2"><label><input type="checkbox" name="ans" value="2">450-97</label> </div>
+                <div class="answer" id="wrong3"><label><input type="checkbox" name="ans" value="3">450-100-3</label> </div>
+                <div class="answer" id="right"><label><input type="checkbox" name="ans" value="4">450-100+3</label></div>
                 </div>
                 <input type="submit" value="submit">
 
